parser.output
Terminals unused in grammar

    PRECONDICION
    POSTCONDICION
    LITERAL_CADENA
    INICIO_LLAVE
    FIN_LLAVE
    IGUAL


State 102 conflicts: 4 shift/reduce
State 103 conflicts: 19 shift/reduce
State 153 conflicts: 1 shift/reduce
State 161 conflicts: 4 shift/reduce
State 162 conflicts: 4 shift/reduce
State 163 conflicts: 4 shift/reduce
State 164 conflicts: 4 shift/reduce
State 165 conflicts: 4 shift/reduce
State 166 conflicts: 4 shift/reduce
State 167 conflicts: 19 shift/reduce
State 168 conflicts: 19 shift/reduce
State 169 conflicts: 4 shift/reduce
State 170 conflicts: 4 shift/reduce
State 171 conflicts: 4 shift/reduce
State 172 conflicts: 4 shift/reduce
State 173 conflicts: 4 shift/reduce
State 175 conflicts: 4 shift/reduce
State 176 conflicts: 4 shift/reduce


Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: ALGORITMO IDENTIFICADOR COMPOSICION cabecera_alg bloque_alg FALGORITMO PUNTO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal COMENTARIO

    3 bloque_alg: bloque COMENTARIO

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_cte decl_globales
    6              | ε

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | ε

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_cte declaraciones
   13              | declaracion_var declaraciones
   14              | ε

   15 declaracion_tipo: TIPO lista_d_tipo FTIPO COMPOSICION

   16 declaracion_cte: CONST lista_d_cte FCONST COMPOSICION

   17 declaracion_var: VAR lista_d_var FVAR COMPOSICION

   18 lista_d_tipo: IDENTIFICADOR CREACION_TIPO d_tipo COMPOSICION lista_d_tipo
   19             | ε

   20 d_tipo: TUPLA lista_campos FTUPLA
   21       | TABLA INICIO_ARRAY expresion_t SUBRANGO expresion_t FIN_ARRAY DE d_tipo
   22       | IDENTIFICADOR
   23       | expresion_t SUBRANGO expresion_t
   24       | REF d_tipo
   25       | tipo_base

   26 expresion_t: expresion
   27            | LITERAL_CARACTER

   28 lista_campos: IDENTIFICADOR DEF_TIPO d_tipo COMPOSICION lista_campos
   29             | ε

   30 tipo_base: ENTERO
   31          | BOOLEANO
   32          | CARACACTER
   33          | REAL
   34          | CADENA

   35 lista_d_cte: IDENTIFICADOR CREACION_TIPO ENTERO COMPOSICION lista_d_cte
   36            | IDENTIFICADOR CREACION_TIPO BOOLEANO COMPOSICION lista_d_cte
   37            | IDENTIFICADOR CREACION_TIPO CARACACTER COMPOSICION lista_d_cte
   38            | IDENTIFICADOR CREACION_TIPO REAL COMPOSICION lista_d_cte
   39            | IDENTIFICADOR CREACION_TIPO CADENA COMPOSICION lista_d_cte
   40            | ε

   41 lista_d_var: lista_id DEF_TIPO IDENTIFICADOR COMPOSICION lista_d_var
   42            | lista_id DEF_TIPO d_tipo COMPOSICION lista_d_var
   43            | ε

   44 lista_id: IDENTIFICADOR SEPARADOR lista_id
   45         | IDENTIFICADOR

   46 decl_ent_sal: decl_ent
   47             | decl_ent decl_sal
   48             | decl_sal

   49 decl_ent: ENT lista_d_var

   50 decl_sal: SAL lista_d_var

   51 expresion: exp
   52          | funcion_ll

   53 exp: exp Y exp
   54    | exp O exp
   55    | NO exp
   56    | IDENTIFICADOR
   57    | exp PUNTO exp
   58    | exp INICIO_ARRAY exp FIN_ARRAY
   59    | exp REF
   60    | VERDADERO
   61    | FALSO
   62    | exp MENOR exp
   63    | exp MAYOR exp
   64    | exp CREACION_TIPO exp
   65    | exp DISTINTO exp
   66    | exp MAYOR_IGUAL exp
   67    | exp MENOR_IGUAL exp
   68    | PARENTESIS_APERTURA exp PARENTESIS_CIERRE
   69    | exp LITERAL_ENTERO
   70    | exp LITERAL_REAL
   71    | exp SUMA exp
   72    | exp RESTA exp
   73    | exp MULTIPLICACION exp
   74    | exp DIVISION exp
   75    | exp MOD exp
   76    | exp DIV exp
   77    | LITERAL_REAL
   78    | LITERAL_ENTERO
   79    | RESTA exp

   80 instrucciones: instruccion COMPOSICION instrucciones
   81              | instruccion

   82 instruccion: CONTINUAR
   83            | asignacion
   84            | alternativa
   85            | iteracion
   86            | accion_ll

   87 asignacion: exp ASIGNACION exp

   88 alternativa: SI expresion ENTONCES instrucciones lista_opciones FSI

   89 lista_opciones: SI_NO_SI expresion ENTONCES instrucciones lista_opciones
   90               | ε

   91 iteracion: it_cota_fija
   92          | it_cota_exp

   93 it_cota_exp: MIENTRAS expresion HACER instrucciones FMIENTRAS

   94 it_cota_fija: PARA IDENTIFICADOR ASIGNACION expresion HASTA expresion HACER instruccion FPARA

   95 accion_d: ACCION a_cabecera bloque FACCION

   96 funcion_d: FUNCION f_cabecera bloque DEV expresion FFUNCION

   97 a_cabecera: IDENTIFICADOR PARENTESIS_APERTURA d_par_form PARENTESIS_CIERRE COMPOSICION

   98 f_cabecera: IDENTIFICADOR PARENTESIS_APERTURA lista_d_var PARENTESIS_CIERRE DEV d_tipo COMPOSICION

   99 d_par_form: d_p_form COMPOSICION d_par_form
  100           | ε

  101 d_p_form: ENT lista_id DEF_TIPO d_tipo
  102         | SAL lista_id DEF_TIPO d_tipo
  103         | ES lista_id DEF_TIPO COMPOSICION d_tipo

  104 accion_ll: IDENTIFICADOR PARENTESIS_APERTURA l_ll PARENTESIS_CIERRE

  105 funcion_ll: IDENTIFICADOR PARENTESIS_APERTURA l_ll PARENTESIS_CIERRE

  106 l_ll: expresion SEPARADOR l_ll
  107     | expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    REAL (258) 33 38
    ENTERO (259) 30 35
    BOOLEANO (260) 31 36
    CARACACTER (261) 32 37
    TABLA (262) 21
    CADENA (263) 34 39
    CONST (264) 16
    FCONST (265) 16
    TIPO (266) 15
    FTIPO (267) 15
    TUPLA (268) 20
    FTUPLA (269) 20
    VAR (270) 17
    FVAR (271) 17
    ES (272) 103
    ENT (273) 49 101
    SAL (274) 50 102
    SUMA (275) 71
    RESTA (276) 72 79
    MULTIPLICACION (277) 73
    DIVISION (278) 74
    DIV (279) 76
    VERDADERO (280) 60
    FALSO (281) 61
    MOD (282) 75
    NO (283) 55
    Y (284) 53
    O (285) 54
    MAYOR_IGUAL (286) 66
    MENOR_IGUAL (287) 67
    DISTINTO (288) 65
    MAYOR (289) 63
    MENOR (290) 62
    ALGORITMO (291) 1
    FALGORITMO (292) 1
    FUNCION (293) 96
    FFUNCION (294) 96
    ACCION (295) 95
    FACCION (296) 95
    SI (297) 88
    FSI (298) 88
    MIENTRAS (299) 93
    FMIENTRAS (300) 93
    PARA (301) 94
    FPARA (302) 94
    CONTINUAR (303) 82
    DE (304) 21
    HASTA (305) 94
    HACER (306) 93 94
    REF (307) 24 59
    DEV (308) 96 98
    COMENTARIO (309) 2 3
    PRECONDICION (310)
    POSTCONDICION (311)
    LITERAL_ENTERO (312) 69 78
    LITERAL_REAL (313) 70 77
    IDENTIFICADOR (314) 1 18 22 28 35 36 37 38 39 41 44 45 56 94 97 98 104 105
    LITERAL_CARACTER (315) 27
    LITERAL_CADENA (316)
    ASIGNACION (317) 87 94
    COMPOSICION (318) 1 15 16 17 18 28 35 36 37 38 39 41 42 80 97 98 99 103
    SEPARADOR (319) 44 106
    SUBRANGO (320) 21 23
    PUNTO (321) 1 57
    DEF_TIPO (322) 28 41 42 101 102 103
    ENTONCES (323) 88 89
    SI_NO_SI (324) 89
    CREACION_TIPO (325) 18 35 36 37 38 39 64
    INICIO_ARRAY (326) 21 58
    FIN_ARRAY (327) 21 58
    INICIO_LLAVE (328)
    FIN_LLAVE (329)
    PARENTESIS_APERTURA (330) 68 97 98 104 105
    PARENTESIS_CIERRE (331) 68 97 98 104 105
    IGUAL (332)


Nonterminals, with rules where they appear

    $accept (78)
        on left: 0
    desc_algoritmo (79)
        on left: 1
        on right: 0
    cabecera_alg (80)
        on left: 2
        on right: 1
    bloque_alg (81)
        on left: 3
        on right: 1
    decl_globales (82)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f (83)
        on left: 7 8 9
        on right: 2 7 8
    bloque (84)
        on left: 10
        on right: 3 95 96
    declaraciones (85)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo (86)
        on left: 15
        on right: 4 11
    declaracion_cte (87)
        on left: 16
        on right: 5 12
    declaracion_var (88)
        on left: 17
        on right: 13
    lista_d_tipo (89)
        on left: 18 19
        on right: 15 18
    d_tipo (90)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 28 42 98 101 102 103
    expresion_t (91)
        on left: 26 27
        on right: 21 23
    lista_campos (92)
        on left: 28 29
        on right: 20 28
    tipo_base (93)
        on left: 30 31 32 33 34
        on right: 25
    lista_d_cte (94)
        on left: 35 36 37 38 39 40
        on right: 16 35 36 37 38 39
    lista_d_var (95)
        on left: 41 42 43
        on right: 17 41 42 49 50 98
    lista_id (96)
        on left: 44 45
        on right: 41 42 44 101 102 103
    decl_ent_sal (97)
        on left: 46 47 48
        on right: 2
    decl_ent (98)
        on left: 49
        on right: 46 47
    decl_sal (99)
        on left: 50
        on right: 47 48
    expresion (100)
        on left: 51 52
        on right: 26 88 89 93 94 96 106 107
    exp (101)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 51 53 54 55 57 58 59 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 79 87
    instrucciones (102)
        on left: 80 81
        on right: 10 80 88 89 93
    instruccion (103)
        on left: 82 83 84 85 86
        on right: 80 81 94
    asignacion (104)
        on left: 87
        on right: 83
    alternativa (105)
        on left: 88
        on right: 84
    lista_opciones (106)
        on left: 89 90
        on right: 88 89
    iteracion (107)
        on left: 91 92
        on right: 85
    it_cota_exp (108)
        on left: 93
        on right: 92
    it_cota_fija (109)
        on left: 94
        on right: 91
    accion_d (110)
        on left: 95
        on right: 7
    funcion_d (111)
        on left: 96
        on right: 8
    a_cabecera (112)
        on left: 97
        on right: 95
    f_cabecera (113)
        on left: 98
        on right: 96
    d_par_form (114)
        on left: 99 100
        on right: 97 99
    d_p_form (115)
        on left: 101 102 103
        on right: 99
    accion_ll (116)
        on left: 104
        on right: 86
    funcion_ll (117)
        on left: 105
        on right: 52
    l_ll (118)
        on left: 106 107
        on right: 104 105 106


State 0

    0 $accept: • desc_algoritmo $end

    ALGORITMO  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: ALGORITMO • IDENTIFICADOR COMPOSICION cabecera_alg bloque_alg FALGORITMO PUNTO

    IDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo • $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: ALGORITMO IDENTIFICADOR • COMPOSICION cabecera_alg bloque_alg FALGORITMO PUNTO

    COMPOSICION  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end •

    $default  accept


State 5

    1 desc_algoritmo: ALGORITMO IDENTIFICADOR COMPOSICION • cabecera_alg bloque_alg FALGORITMO PUNTO

    CONST  shift, and go to state 6
    TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    cabecera_alg      go to state 8
    decl_globales     go to state 9
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 6

   16 declaracion_cte: CONST • lista_d_cte FCONST COMPOSICION

    IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 40 (lista_d_cte)

    lista_d_cte  go to state 13


State 7

   15 declaracion_tipo: TIPO • lista_d_tipo FTIPO COMPOSICION

    IDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 19 (lista_d_tipo)

    lista_d_tipo  go to state 15


State 8

    1 desc_algoritmo: ALGORITMO IDENTIFICADOR COMPOSICION cabecera_alg • bloque_alg FALGORITMO PUNTO

    CONST  shift, and go to state 6
    TIPO   shift, and go to state 7
    VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque_alg        go to state 17
    bloque            go to state 18
    declaraciones     go to state 19
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 9

    2 cabecera_alg: decl_globales • decl_a_f decl_ent_sal COMENTARIO

    FUNCION  shift, and go to state 23
    ACCION   shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 25
    accion_d   go to state 26
    funcion_d  go to state 27


State 10

    4 decl_globales: declaracion_tipo • decl_globales

    CONST  shift, and go to state 6
    TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales     go to state 28
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 11

    5 decl_globales: declaracion_cte • decl_globales

    CONST  shift, and go to state 6
    TIPO   shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales     go to state 29
    declaracion_tipo  go to state 10
    declaracion_cte   go to state 11


State 12

   35 lista_d_cte: IDENTIFICADOR • CREACION_TIPO ENTERO COMPOSICION lista_d_cte
   36            | IDENTIFICADOR • CREACION_TIPO BOOLEANO COMPOSICION lista_d_cte
   37            | IDENTIFICADOR • CREACION_TIPO CARACACTER COMPOSICION lista_d_cte
   38            | IDENTIFICADOR • CREACION_TIPO REAL COMPOSICION lista_d_cte
   39            | IDENTIFICADOR • CREACION_TIPO CADENA COMPOSICION lista_d_cte

    CREACION_TIPO  shift, and go to state 30


State 13

   16 declaracion_cte: CONST lista_d_cte • FCONST COMPOSICION

    FCONST  shift, and go to state 31


State 14

   18 lista_d_tipo: IDENTIFICADOR • CREACION_TIPO d_tipo COMPOSICION lista_d_tipo

    CREACION_TIPO  shift, and go to state 32


State 15

   15 declaracion_tipo: TIPO lista_d_tipo • FTIPO COMPOSICION

    FTIPO  shift, and go to state 33


State 16

   17 declaracion_var: VAR • lista_d_var FVAR COMPOSICION

    IDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 43 (lista_d_var)

    lista_d_var  go to state 35
    lista_id     go to state 36


State 17

    1 desc_algoritmo: ALGORITMO IDENTIFICADOR COMPOSICION cabecera_alg bloque_alg • FALGORITMO PUNTO

    FALGORITMO  shift, and go to state 37


State 18

    3 bloque_alg: bloque • COMENTARIO

    COMENTARIO  shift, and go to state 38


State 19

   10 bloque: declaraciones • instrucciones

    RESTA                shift, and go to state 39
    VERDADERO            shift, and go to state 40
    FALSO                shift, and go to state 41
    NO                   shift, and go to state 42
    SI                   shift, and go to state 43
    MIENTRAS             shift, and go to state 44
    PARA                 shift, and go to state 45
    CONTINUAR            shift, and go to state 46
    LITERAL_ENTERO       shift, and go to state 47
    LITERAL_REAL         shift, and go to state 48
    IDENTIFICADOR        shift, and go to state 49
    PARENTESIS_APERTURA  shift, and go to state 50

    exp            go to state 51
    instrucciones  go to state 52
    instruccion    go to state 53
    asignacion     go to state 54
    alternativa    go to state 55
    iteracion      go to state 56
    it_cota_exp    go to state 57
    it_cota_fija   go to state 58
    accion_ll      go to state 59


State 20

   11 declaraciones: declaracion_tipo • declaraciones

    CONST  shift, and go to state 6
    TIPO   shift, and go to state 7
    VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 60
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 21

   12 declaraciones: declaracion_cte • declaraciones

    CONST  shift, and go to state 6
    TIPO   shift, and go to state 7
    VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 61
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 22

   13 declaraciones: declaracion_var • declaraciones

    CONST  shift, and go to state 6
    TIPO   shift, and go to state 7
    VAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones     go to state 62
    declaracion_tipo  go to state 20
    declaracion_cte   go to state 21
    declaracion_var   go to state 22


State 23

   96 funcion_d: FUNCION • f_cabecera bloque DEV expresion FFUNCION

    IDENTIFICADOR  shift, and go to state 63

    f_cabecera  go to state 64


State 24

   95 accion_d: ACCION • a_cabecera bloque FACCION

    IDENTIFICADOR  shift, and go to state 65

    a_cabecera  go to state 66


State 25

    2 cabecera_alg: decl_globales decl_a_f • decl_ent_sal COMENTARIO

    ENT  shift, and go to state 67
    SAL  shift, and go to state 68

    decl_ent_sal  go to state 69
    decl_ent      go to state 70
    decl_sal      go to state 71


State 26

    7 decl_a_f: accion_d • decl_a_f

    FUNCION  shift, and go to state 23
    ACCION   shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 72
    accion_d   go to state 26
    funcion_d  go to state 27


State 27

    8 decl_a_f: funcion_d • decl_a_f

    FUNCION  shift, and go to state 23
    ACCION   shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 73
    accion_d   go to state 26
    funcion_d  go to state 27


State 28

    4 decl_globales: declaracion_tipo decl_globales •

    $default  reduce using rule 4 (decl_globales)


State 29

    5 decl_globales: declaracion_cte decl_globales •

    $default  reduce using rule 5 (decl_globales)


State 30

   35 lista_d_cte: IDENTIFICADOR CREACION_TIPO • ENTERO COMPOSICION lista_d_cte
   36            | IDENTIFICADOR CREACION_TIPO • BOOLEANO COMPOSICION lista_d_cte
   37            | IDENTIFICADOR CREACION_TIPO • CARACACTER COMPOSICION lista_d_cte
   38            | IDENTIFICADOR CREACION_TIPO • REAL COMPOSICION lista_d_cte
   39            | IDENTIFICADOR CREACION_TIPO • CADENA COMPOSICION lista_d_cte

    REAL        shift, and go to state 74
    ENTERO      shift, and go to state 75
    BOOLEANO    shift, and go to state 76
    CARACACTER  shift, and go to state 77
    CADENA      shift, and go to state 78


State 31

   16 declaracion_cte: CONST lista_d_cte FCONST • COMPOSICION

    COMPOSICION  shift, and go to state 79


State 32

   18 lista_d_tipo: IDENTIFICADOR CREACION_TIPO • d_tipo COMPOSICION lista_d_tipo
